// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches link fields > brokenLink > group 1`] = `
{
  "group": [
    {
      "field": {
        "isBroken": true,
        "type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > brokenLink > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "isBroken": true,
            "type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "isBroken": true,
          "type": "Document",
        },
        "group": [
          {
            "field": {
              "isBroken": true,
              "type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "isBroken": true,
            "type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "isBroken": true,
          "type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > static zone 1`] = `
{
  "field": {
    "isBroken": true,
    "type": "Document",
  },
}
`;

exports[`patches link fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "laoreet",
        "link_type": "Document",
        "tags": [],
        "type": "orci",
      },
    },
  ],
}
`;

exports[`patches link fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "tortor,",
            "link_type": "Document",
            "tags": [
              "Risus In",
            ],
            "type": "dui",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "tortor,",
          "link_type": "Document",
          "tags": [
            "Risus In",
          ],
          "type": "dui",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "sapien",
            "link_type": "Document",
            "tags": [
              "Aenean",
            ],
            "type": "amet",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "sapien",
          "link_type": "Document",
          "tags": [
            "Aenean",
          ],
          "type": "amet",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > existing > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "isBroken": false,
    "lang": "eget",
    "link_type": "Document",
    "tags": [],
    "type": "phasellus",
  },
}
`;

exports[`patches link fields > lazyExisting > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "isBroken": false,
        "lang": "laoreet",
        "link_type": "Document",
        "tags": [],
        "type": "orci",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "tortor,",
            "link_type": "Document",
            "tags": [
              "Risus In",
            ],
            "type": "dui",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "tortor,",
          "link_type": "Document",
          "tags": [
            "Risus In",
          ],
          "type": "dui",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "isBroken": false,
              "lang": "tortor,",
              "link_type": "Document",
              "tags": [
                "Risus In",
              ],
              "type": "dui",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "sapien",
            "link_type": "Document",
            "tags": [
              "Aenean",
            ],
            "type": "amet",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "isBroken": false,
          "lang": "sapien",
          "link_type": "Document",
          "tags": [
            "Aenean",
          ],
          "type": "amet",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "isBroken": false,
    "lang": "eget",
    "link_type": "Document",
    "tags": [],
    "type": "phasellus",
  },
}
`;

exports[`patches link fields > lazyMigration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [
          "Odio Eu",
        ],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [
              "Ipsum Consequat",
            ],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [
            "Ipsum Consequat",
          ],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > migration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [
          "Odio Eu",
        ],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > migration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > migration > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [
              "Ipsum Consequat",
            ],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [
            "Ipsum Consequat",
          ],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > migration > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > migrationNoTags > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "isBroken": false,
        "lang": "a",
        "link_type": "Document",
        "tags": [],
        "type": "amet",
        "uid": "Non sodales neque",
      },
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "gravida",
            "link_type": "Document",
            "tags": [],
            "type": "leo",
            "uid": "Blandit volutpat maecenas",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "gravida",
          "link_type": "Document",
          "tags": [],
          "type": "leo",
          "uid": "Blandit volutpat maecenas",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "isBroken": false,
              "lang": "gravida",
              "link_type": "Document",
              "tags": [],
              "type": "leo",
              "uid": "Blandit volutpat maecenas",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "isBroken": false,
            "lang": "ultrices",
            "link_type": "Document",
            "tags": [],
            "type": "eget",
            "uid": "Amet dictum sit",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "isBroken": false,
          "lang": "ultrices",
          "link_type": "Document",
          "tags": [],
          "type": "eget",
          "uid": "Amet dictum sit",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "isBroken": false,
    "lang": "nisi,",
    "link_type": "Document",
    "tags": [],
    "type": "eros",
    "uid": "Scelerisque mauris pellentesque",
  },
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other-repository",
        "isBroken": false,
        "lang": "faucibus",
        "link_type": "Document",
        "tags": [],
        "type": "lorem",
        "uid": "Pharetra et ultrices",
      },
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other-repository",
            "isBroken": false,
            "lang": "eu",
            "link_type": "Document",
            "tags": [
              "Pharetra",
            ],
            "type": "pellentesque",
            "uid": "Volutpat ac tincidunt",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other-repository",
          "isBroken": false,
          "lang": "eu",
          "link_type": "Document",
          "tags": [
            "Pharetra",
          ],
          "type": "pellentesque",
          "uid": "Volutpat ac tincidunt",
        },
        "group": [
          {
            "field": {
              "id": "id-other-repository",
              "isBroken": false,
              "lang": "eu",
              "link_type": "Document",
              "tags": [
                "Pharetra",
              ],
              "type": "pellentesque",
              "uid": "Volutpat ac tincidunt",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other-repository",
            "isBroken": false,
            "lang": "dignissim",
            "link_type": "Document",
            "tags": [
              "Arcu Vitae",
            ],
            "type": "a",
            "uid": "Tristique senectus et",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other-repository",
          "isBroken": false,
          "lang": "dignissim",
          "link_type": "Document",
          "tags": [
            "Arcu Vitae",
          ],
          "type": "a",
          "uid": "Tristique senectus et",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > static zone 1`] = `
{
  "field": {
    "id": "id-other-repository",
    "isBroken": false,
    "lang": "quam",
    "link_type": "Document",
    "tags": [],
    "type": "semper",
    "uid": "Sed viverra ipsum",
  },
}
`;

exports[`patches link fields > richTextLinkNode > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "id": "id-existing",
                "isBroken": false,
                "lang": "laoreet",
                "link_type": "Document",
                "tags": [],
                "type": "orci",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "isBroken": false,
                    "lang": "tortor,",
                    "link_type": "Document",
                    "tags": [
                      "Risus In",
                    ],
                    "type": "dui",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "tortor,",
                  "link_type": "Document",
                  "tags": [
                    "Risus In",
                  ],
                  "type": "dui",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "id": "id-existing",
                      "isBroken": false,
                      "lang": "tortor,",
                      "link_type": "Document",
                      "tags": [
                        "Risus In",
                      ],
                      "type": "dui",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "isBroken": false,
                    "lang": "sapien",
                    "link_type": "Document",
                    "tags": [
                      "Aenean",
                    ],
                    "type": "amet",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "isBroken": false,
                  "lang": "sapien",
                  "link_type": "Document",
                  "tags": [
                    "Aenean",
                  ],
                  "type": "amet",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "id": "id-existing",
            "isBroken": false,
            "lang": "eget",
            "link_type": "Document",
            "tags": [],
            "type": "phasellus",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;
